--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
               <span class="author-block">
                 <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Zhengdi Yu</a><sup>1,2</sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Shaoli Huang</a><sup>*</sup>,</span>
+                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Shaoli Huang</a><sup>2,*</sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Chen Fang</a><sup></sup>,</span>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Chen Fang</a><sup>2</sup>,</span>
                     <span class="author-block">
-                      <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Toby P. Breckon</a><sup></sup>,</span>
+                      <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Toby P. Breckon</a><sup>1</sup>,</span>
                       <span class="author-block">
                         <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Jue Wang</a>
                         <span class="author-block">
