--- a/index.html
+++ b/index.html
@@ -127,21 +127,6 @@
   </div>
 </section>
 
-<table align=center width=450px>
-		<center><h1>Paper and Supplementary Material</h1></center>
-		<tr>
-			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
-			<td><span style="font-size:14pt">F. Author, S. Author, T. Author.<br>
-				<b>Creative and Descriptive Paper Title.</b><br>
-				In Conference, 20XX.<br>
-				(hosted on <a href="">ArXiv</a>)<br>
-				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
-				<span style="font-size:4pt"><a href=""><br></a>
-				</span>
-			</td>
-		</tr>
-</table>
-
 <!-- Teaser video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
@@ -280,6 +265,7 @@
 
 
 <!-- Paper poster -->
+<!--
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
@@ -291,6 +277,21 @@
       </div>
     </div>
   </section>
+-->
+<table align=center width=450px>
+	<center><h1>Paper and Supplementary Material</h1></center>
+	<tr>
+		<td><a href=""><img class="layered-paper-big" style="height:175px" src="static/images/paper.png"/></a></td>
+		<td><span style="font-size:14pt">F. Author, S. Author, T. Author.<br>
+			<b>Creative and Descriptive Paper Title.</b><br>
+			In Conference, 20XX.<br>
+			(hosted on <a href="">ArXiv</a>)<br>
+			<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
+			<span style="font-size:4pt"><a href=""><br></a>
+			</span>
+		</td>
+	</tr>
+</table>
 <!--End paper poster -->
 
 
