--- a/index.html
+++ b/index.html
@@ -265,33 +265,36 @@
 
 
 <!-- Paper poster -->
-<!--
+
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
       <h2 class="title">Poster</h2>
 
-      <iframe  src="static/pdfs/sample.pdf" width="100%" height="550">
-          </iframe>
+      <br>
+	<hr>
+	<table align=center width=450px>
+		<center><h1>Paper and Supplementary Material</h1></center>
+		<tr>
+			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
+			<td><span style="font-size:14pt">F. Author, S. Author, T. Author.<br>
+				<b>Creative and Descriptive Paper Title.</b><br>
+				In Conference, 20XX.<br>
+				(hosted on <a href="">ArXiv</a>)<br>
+				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
+				<span style="font-size:4pt"><a href=""><br></a>
+				</span>
+			</td>
+		</tr>
+	</table>
+	<br>
+      <!-- <iframe  src="static/pdfs/sample.pdf" width="100%" height="550">
+          </iframe> -->
         
       </div>
     </div>
   </section>
--->
-<table align=center width=450px>
-	<center><h1>Paper and Supplementary Material</h1></center>
-	<tr>
-		<td><a href=""><img class="layered-paper-big" style="height:175px" src="static/images/paper.png"/></a></td>
-		<td><span style="font-size:14pt">F. Author, S. Author, T. Author.<br>
-			<b>Creative and Descriptive Paper Title.</b><br>
-			In Conference, 20XX.<br>
-			(hosted on <a href="">ArXiv</a>)<br>
-			<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
-			<span style="font-size:4pt"><a href=""><br></a>
-			</span>
-		</td>
-	</tr>
-</table>
+	
 <!--End paper poster -->
 
 
