--- a/index.html
+++ b/index.html
@@ -265,18 +265,16 @@
 
 
 <!-- Paper poster -->
-
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title">Poster</h2>
+      <h2 class="title">Paper and Supplementary Material</h2>
 
       <br>
 	<hr>
 	<table align=center width=450px>
-		<center><h1>Paper and Supplementary Material</h1></center>
 		<tr>
-			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
+			<td><a href=""><img class="layered-paper-big" style="height:175px" src=".static/images/paper.png"/></a></td>
 			<td><span style="font-size:14pt">F. Author, S. Author, T. Author.<br>
 				<b>Creative and Descriptive Paper Title.</b><br>
 				In Conference, 20XX.<br>
@@ -294,7 +292,6 @@
       </div>
     </div>
   </section>
-	
 <!--End paper poster -->
 
 
