--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 	<hr>
 	<table align=center width=450px>
 		<tr>
-			<td><a href=""><img class="layered-paper-big" style="height:175px" src=".static/images/paper.png"/></a></td>
+			<td><a href=""><img class="layered-paper-big" style="height:175px" src="static/images/carousel2.jpg"/></a></td>
 			<td><span style="font-size:14pt">F. Author, S. Author, T. Author.<br>
 				<b>Creative and Descriptive Paper Title.</b><br>
 				In Conference, 20XX.<br>
