--- a/index.html
+++ b/index.html
@@ -336,13 +336,20 @@
       <div class="column is-8">
         <div class="content">
 
-          <p>
+          <!--<p>
             This website is licensed under a <a rel="license"  href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
             Commons Attribution-ShareAlike 4.0 International License</a>.
             <br>
 	    This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">this project</a>.
             You are free to borrow the of this website, we just ask that you link back to this page in the footer. 
-          </p>
+          </p>-->
+	  <pre>
+	       This website is licensed under a <a rel="license"  href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
+               Commons Attribution-ShareAlike 4.0 International License</a>.
+	       
+	       This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">this project</a>.
+               You are free to borrow the of this website, we just ask that you link back to this page in the footer.
+	  </pre>
 
         </div>
       </div>
