--- a/index.html
+++ b/index.html
@@ -324,7 +324,13 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>@inproceedings{yu2023acr,
+  title = {ACR: Attention Collaboration-based Regressor for Arbitrary Two-Hand Reconstruction},
+  author = {Yu, Zhengdi and Huang, Shaoli and Chen, Fang and Breckon, Toby P.},
+  booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  month     = {June},
+  year      = {2023}
+  }</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
