--- a/index.html
+++ b/index.html
@@ -300,11 +300,10 @@
 	<table align=center width=450px>
 		<tr>
 			<td><a href=""><img class="layered-paper-big" style="height:175px" src="static/images/paper.jpg"/></a></td>
-			<td><span style="font-size:14pt">F. Author, S. Author, T. Author.<br>
-				<b>Creative and Descriptive Paper Title.</b><br>
-				In Conference, 20XX.<br>
-				(hosted on <a href="">ArXiv</a>)<br>
-				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
+			<td><span style="font-size:14pt">Zhengdi Yu, Shaoli Huang, Chen Fang, Toby P. Breckon, Jue Wang<br>
+				<b>ACR: Attention Collaboration-based Regressor for Arbitrary Two-Hand Reconstruction</b><br>
+				In Conference on Computer Vision and Pattern Recognition (CVPR), 2023.<br>
+				<!-- (<a href="https://arxiv.org/pdf/2303.05938.pdf">camera ready</a>)<br> -->
 				<span style="font-size:4pt"><a href=""><br></a>
 				</span>
 			</td>
