--- a/index.html
+++ b/index.html
@@ -297,7 +297,8 @@
 
       <br>
 	<hr>
-	<table align=center width=450px>
+	<!-- <table align=center width=450px> -->
+	     <table align=center width=600px> 
 		<tr>
 			<td><a href=""><img class="layered-paper-big" style="height:175px" src="static/images/paper.jpg"/></a></td>
 			<td><span style="font-size:14pt">Zhengdi Yu, Shaoli Huang, Chen Fang, Toby P. Breckon, Jue Wang<br>
