--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 		5px 5px 1px 1px rgba(0,0,0,0.35), /* The second layer shadow */
 		10px 10px 0 0px #fff, /* The third layer */
 		10px 10px 1px 1px rgba(0,0,0,0.35), /* The third layer shadow */
-		15px 15px 0 0px #fff, /* The fourth layer */
+		<!--15px 15px 0 0px #fff, /* The fourth layer */
 		15px 15px 1px 1px rgba(0,0,0,0.35), /* The fourth layer shadow */
 		20px 20px 0 0px #fff, /* The fifth layer */
 		20px 20px 1px 1px rgba(0,0,0,0.35), /* The fifth layer shadow */
 		25px 25px 0 0px #fff, /* The fifth layer */
-		25px 25px 1px 1px rgba(0,0,0,0.35); /* The fifth layer shadow */
+		25px 25px 1px 1px rgba(0,0,0,0.35); /* The fifth layer shadow */-->
 		margin-left: 10px;
 		margin-right: 45px;
 	}
