--- a/index.html
+++ b/index.html
@@ -292,13 +292,13 @@
       <br>
 	<hr>
 	<!-- <table align=center width=450px> -->
-	     <table align=center width=600px> 
+	     <table align=center width=700px> 
 		<tr>
 			<td><a href=""><img class="layered-paper-big" style="height:175px" src="static/images/paper.jpg"/></a></td>
 			<td><span style="font-size:10pt">Zhengdi Yu, Shaoli Huang, Chen Fang, Toby P. Breckon, Jue Wang<br>
 				<b>ACR: Attention Collaboration-based Regressor for Arbitrary Two-Hand Reconstruction</b><br>
 				In Conference on Computer Vision and Pattern Recognition (CVPR), 2023.<br>
-				<!-- (<a href="https://arxiv.org/pdf/2303.05938.pdf">camera ready</a>)<br> -->
+				(<a href="https://arxiv.org/pdf/2303.05938.pdf">camera ready</a>)<br>
 				<span style="font-size:4pt"><a href=""><br></a>
 				</span>
 			</td>
