--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		5px 5px 0 0px #fff, /* The second layer */
 		5px 5px 1px 1px rgba(0,0,0,0.35), /* The second layer shadow */
 		10px 10px 0 0px #fff, /* The third layer */
-		10px 10px 1px 1px rgba(0,0,0,0.35), /* The third layer shadow */
+		10px 10px 1px 1px rgba(0,0,0,0.35); /* The third layer shadow */
 		margin-left: 10px;
 		margin-right: 45px;
 	}
