--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
           First image description.
         </h2>
       </div>
+<!--
       <div class="item">
         <!-- Your image here -->
         <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
@@ -214,6 +215,7 @@
       <h2 class="subtitle has-text-centered">
         Fourth image description.
       </h2>
+-->
     </div>
   </div>
 </div>
@@ -224,7 +226,7 @@
 
 
 
-<!-- Youtube video -->
+<!-- Youtube video
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
@@ -243,7 +245,7 @@
   </div>
 </section>
 <!-- End youtube video -->
-
+-->
 
 <!-- Video carousel -->
 <section class="hero is-small">
@@ -287,18 +289,18 @@
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
-      <h2 class="title">Paper and Supplementary Material</h2>
+      <h2 class="title">Technical Paper</h2>
 
       <br>
 	<hr>
 	<!-- <table align=center width=450px> -->
 	     <table align=center width=700px> 
 		<tr>
-			<td><a href=""><img class="layered-paper-big" style="height:175px" src="static/images/paper.jpg"/></a></td>
+			<td><a href="https://arxiv.org/pdf/2303.05938.pdf"><img class="layered-paper-big" style="height:175px" src="static/images/paper.jpg"/></a></td>
 			<td><span style="font-size:10pt">Zhengdi Yu, Shaoli Huang, Chen Fang, Toby P. Breckon, Jue Wang<br>
 				<b>ACR: Attention Collaboration-based Regressor for Arbitrary Two-Hand Reconstruction</b><br>
 				In Conference on Computer Vision and Pattern Recognition (CVPR), 2023.<br>
-				(<a href="https://arxiv.org/pdf/2303.05938.pdf">camera ready</a>)<br>
+				<!--(<a href="https://arxiv.org/pdf/2303.05938.pdf">camera ready</a>)<br>-->
 				<span style="font-size:4pt"><a href=""><br></a>
 				</span>
 			</td>
