--- a/index.html
+++ b/index.html
@@ -197,14 +197,14 @@
     </div>
   </div>
 </div>
-</div>
 </section>
 <!-- End image carousel -->
 
 
 
 
-<!-- Youtube video
+<!-- Youtube video-->
+<!-- 
 <section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
@@ -222,8 +222,9 @@
     </div>
   </div>
 </section>
-<!-- End youtube video -->
 -->
+<!-- End youtube video -->
+
 
 <!-- Video carousel -->
 <section class="hero is-small">
