--- a/index.html
+++ b/index.html
@@ -184,24 +184,28 @@
 
 <!-- Image carousel -->
 <section class="hero is-small">
-<center>
-	<table align=center width=850px>
-		<tr>
-			<td width=260px>
-				<center>
-					<img class="round" style="width:500px" src="./resources/teaser.png"/>
-				</center>
-			</td>
-		</tr>
-	</table>
-	<table align=center width=850px>
-		<tr>
-			<td>
-				This was a template originally made for <a href="http://richzhang.github.io/colorization/">Colorful Image Colorization</a>. The code can be found in this <a href="https://github.com/richzhang/webpage-template">repository</a>.
-			</td>
-		</tr>
-	</table>
-</center>
+  <div class="container is-max-desktop">
+    <div class="hero-body">
+      <center>
+		<table align=center width=850px>
+			<tr>
+				<td width=260px>
+					<center>
+						<img class="round" style="width:500px" src="./resources/teaser.png"/>
+					</center>
+				</td>
+			</tr>
+		</table>
+		<table align=center width=850px>
+			<tr>
+				<td>
+					This was a template originally made for <a href="http://richzhang.github.io/colorization/">Colorful Image Colorization</a>. The code can be found in this <a href="https://github.com/richzhang/webpage-template">repository</a>.
+				</td>
+			</tr>
+		</table>
+	</center>
+  </div>
+</div>
 </section>
 <!-- End image carousel -->
 
