--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
 <section class="hero is-small">
   <div class="container is-max-desktop">
     <div class="hero-body">
+      <h2 class="title is-3">Another Carousel</h2>
       <center>
 		<table align=center width=850px>
 			<tr>
