--- a/index.html
+++ b/index.html
@@ -183,10 +183,9 @@
 
 
 <!-- Image carousel -->
-<section class="hero is-small">
-  <div class="container is-max-desktop">
-    <div class="hero-body">
-      <h2 class="title is-3">Another Carousel</h2>
+<section class="section" id="method">
+    <div class="container is-max-desktop content">
+      <h2 class="title">Method Overview</h2>
       <center>
 		<table align=center width=850px>
 			<tr>
@@ -205,8 +204,7 @@
 			</tr>
 		</table>
 	</center>
-  </div>
-</div>
+    </div>
 </section>
 <!-- End image carousel -->
 
