--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
 
 <!-- Video carousel -->
-<section class="hero is-small">
+<section class="hero is-small is-light">
   <div class="hero-body">
     <div class="container">
       <h2 class="title is-3">Another Carousel</h2>
