--- a/index.html
+++ b/index.html
@@ -184,9 +184,12 @@
 
 <!-- Image carousel -->
 <section class="section" id="method">
-    <div class="container is-max-desktop content">
-      <h2 class="title">Method Overview</h2>
-      <center>
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Abstract</h2>
+        <div class="content has-text-justified">
+          <center>
 		<table align=center width=850px>
 			<tr>
 				<td width=260px>
@@ -203,8 +206,11 @@
 				</td>
 			</tr>
 		</table>
-	</center>
+	  </center>
+        </div>
+      </div>
     </div>
+  </div>
 </section>
 <!-- End image carousel -->
 
