--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 		<table align=center width=850px>
 			<tr>
 				<td>
-					This was a template originally made for <a href="http://richzhang.github.io/colorization/">Colorful Image Colorization</a>. The code can be found in this <a href="https://github.com/richzhang/webpage-template">repository</a>.
+					Figure 2. ACR network architecture: ACR takes a full-person image and uses a feature map encoder to extract hand-center maps, partsegmentation maps, cross-hand prior maps, and parameter maps. Subsequently, the feature aggregator generates the final feature for the hand model regression based on these feature maps.
 				</td>
 			</tr>
 		</table>
