--- a/index.html
+++ b/index.html
@@ -257,11 +257,6 @@
       <!-- Visual Effects. -->
       <div class="column">
         <div class="content">
-          <h2 class="title is-3">Visual Effects</h2>
-          <p>
-            Using <i>nerfies</i> you can create fun visual effects. This Dolly zoom effect
-            would be impossible without nerfies since it would require going through a wall.
-          </p>
           <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
             <source src="static/videos/carousel2.mp4"
                     type="video/mp4">
@@ -272,13 +267,8 @@
 
       <!-- Matting. -->
       <div class="column">
-        <h2 class="title is-3">Matting</h2>
         <div class="columns is-centered">
           <div class="column content">
-            <p>
-              As a byproduct of our method, we can also solve the matting problem by ignoring
-              samples that fall outside of a bounding box during rendering.
-            </p>
             <video id="matting-video" controls playsinline height="100%">
               <source src="static/videos/carousel3.mp4"
                       type="video/mp4">
@@ -350,7 +340,7 @@
 	       This website is licensed under a <a rel="license"  href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
                Commons Attribution-ShareAlike 4.0 International License</a>.
 	       
-	       This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">this project</a>.
+	       This page was built using the <a href="https://nerfies.github.io/" target="_blank">Nerfies website</a>.
                You are free to borrow the of this website, we just ask that you link back to this page in the footer.
 	  </p>
 
