--- a/index.html
+++ b/index.html
@@ -153,9 +153,27 @@
       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
         <source src="static/videos/banner_video.mp4" type="video/mp4">
-        <source src="static/videos/carousel1.mp4" type="video/mp4">
-        </object>
       </video>
+	    <!-- Visual Effects. -->
+      <div class="column">
+        <div class="content">
+          <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
+            <source src="static/videos/carousel2.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+      <!--/ Visual Effects. -->
+
+      <!-- Matting. -->
+      <div class="column">
+        <div class="columns is-centered">
+            <video id="matting-video" controls playsinline height="100%">
+              <source src="static/videos/carousel3.mp4"
+                      type="video/mp4">
+            </video>
+         </div>
+      </div>
       <h2 class="subtitle has-text-centered">
         Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
       </h2>
@@ -274,7 +292,6 @@
                       type="video/mp4">
             </video>
           </div>
-
         </div>
       </div>
     </div>
