--- a/index.html
+++ b/index.html
@@ -286,13 +286,12 @@
       <!-- Matting. -->
       <div class="column">
         <div class="columns is-centered">
-          <div class="column content">
-            <video id="matting-video" controls playsinline height="100%">
+            <video id="matting-video" autoplay controls muted loop playsinline height="100%">
               <source src="static/videos/carousel3.mp4"
                       type="video/mp4">
             </video>
-          </div>
-        </div>
+         </div>
+       </div>
       </div>
     </div>
     <!--/ Matting. -->
