--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
 
 
 
-<section class="section">
+<section class="hero teaser">
   <div class="container is-max-desktop">
-    <div class="columns is-centered">
+    <div class="hero-body">
 
       <!-- Visual Effects. -->
       <div class="column">
