--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
 <section class="hero teaser">
   <div class="container is-max-desktop">
-    <div class="hero-body">
+    <div class="columns is-centered">
 
       <!-- Visual Effects. -->
       <div class="column">
