--- a/index.html
+++ b/index.html
@@ -149,15 +149,31 @@
 <!-- Teaser video-->
 <section class="hero teaser">
   <div class="container is-max-desktop">
-    <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <!-- Your video here -->
-        <source src="static/videos/banner_video.mp4" type="video/mp4">
-      </video>
-      <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
-      </h2>
+    <div class="columns is-centered">
+
+      <!-- Visual Effects. -->
+      <div class="column">
+        <div class="content">
+          <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
+            <source src="static/videos/carousel2.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+      <!--/ Visual Effects. -->
+
+      <!-- Matting. -->
+      <div class="column">
+        <div class="columns is-centered">
+            <video id="matting-video" autoplay controls muted loop playsinline height="100%">
+              <source src="static/videos/carousel3.mp4"
+                      type="video/mp4">
+            </video>
+         </div>
+       </div>
+      </div>
     </div>
+    <!--/ Matting. -->
   </div>
 </section>
 <!-- End teaser video -->
@@ -200,7 +216,7 @@
 		<table align=center width=850px>
 			<tr>
 				<td>
-					ACR takes a full-person image and uses a feature map encoder to extract hand-center maps, partsegmentation maps, cross-hand prior maps, and parameter maps. Subsequently, the feature aggregator generates the final feature for the hand model regression based on these feature maps.
+					ACR takes a full-person image and uses a feature map encoder to extract hand-center maps, part segmentation maps, cross-hand prior maps, and parameter maps. Subsequently, the feature aggregator generates the final feature for the hand model regression based on these feature maps.
 				</td>
 			</tr>
 		</table>
@@ -245,38 +261,6 @@
   </div>
 </section>
 <!-- End video carousel -->
-
-
-
-<section class="hero teaser">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered">
-
-      <!-- Visual Effects. -->
-      <div class="column">
-        <div class="content">
-          <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
-            <source src="static/videos/carousel2.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-      </div>
-      <!--/ Visual Effects. -->
-
-      <!-- Matting. -->
-      <div class="column">
-        <div class="columns is-centered">
-            <video id="matting-video" autoplay controls muted loop playsinline height="100%">
-              <source src="static/videos/carousel3.mp4"
-                      type="video/mp4">
-            </video>
-         </div>
-       </div>
-      </div>
-    </div>
-    <!--/ Matting. -->
-  </div>
-</section>
 
 
 <!-- Paper poster -->
