--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <div class="column">
         <div class="content">
           <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
-            <source src="static/videos/carousel2.mp4"
+            <source src="static/videos/1.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -166,7 +166,7 @@
       <div class="column">
         <div class="columns is-centered">
             <video id="matting-video" autoplay controls muted loop playsinline height="100%">
-              <source src="static/videos/carousel3.mp4"
+              <source src="static/videos/2.mp4"
                       type="video/mp4">
             </video>
          </div>
