--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
       <!-- Visual Effects. -->
       <div class="column">
-        <div class="content">
+        <div class="columns is-centered">
           <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
             <source src="static/videos/1_compress.mp4"
                     type="video/mp4">
@@ -165,10 +165,10 @@
       <!-- Matting. -->
       <div class="column">
         <div class="columns is-centered">
-            <video id="matting-video" autoplay controls muted loop playsinline height="100%">
-              <source src="static/videos/2_compress.mp4"
-                      type="video/mp4">
-            </video>
+           <video id="matting-video" autoplay controls muted loop playsinline height="100%">
+             <source src="static/videos/2_compress.mp4"
+                     type="video/mp4">
+           </video>
          </div>
        </div>
       </div>
