--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
       <!-- Visual Effects. -->
       <div class="column">
-        <div class="columns is-centered">
+        <div class="content">
           <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
             <source src="static/videos/1_compress.mp4"
                     type="video/mp4">
@@ -164,7 +164,7 @@
 
       <!-- Matting. -->
       <div class="column">
-        <div class="columns is-centered">
+        <div class="content">
            <video id="matting-video" autoplay controls muted loop playsinline height="100%">
              <source src="static/videos/2_compress.mp4"
                      type="video/mp4">
