--- a/index.html
+++ b/index.html
@@ -232,34 +232,35 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
+      <h2 class="title is-3">Results</h2>
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
+        <img src="static/images/carousel1.jpg" style="width:850px"  alt="MY ALT TEXT"/>
 	<h2 class="subtitle has-text-centered">
-        First image description.
+          First image description.
         </h2>
-        <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
       </div>
       <div class="item">
         <!-- Your image here -->
+        <img src="static/images/carousel2.jpg" style="width:850px"  alt="MY ALT TEXT"/>
 	<h2 class="subtitle has-text-centered">
           Second image description.
-        </h2>      
-        <img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
+        </h2>   
       </div>
       <div class="item">
         <!-- Your image here -->
+        <img src="static/images/carousel3.jpg" style="width:850px"  alt="MY ALT TEXT"/>
 	<h2 class="subtitle has-text-centered">
-         Third image description.
+          Third image description.
         </h2>
-        <img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
      </div>
      <div class="item">
       <!-- Your image here -->
+      <img src="static/images/carousel4.jpg" style="width:850px" alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
         Fourth image description.
       </h2>
-      <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
     </div>
   </div>
 </div>
