--- a/index.html
+++ b/index.html
@@ -236,28 +236,28 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel1.jpg" style="width:850px"  alt="MY ALT TEXT"/>
+        <img src="static/images/carousel1.jpg" style="width:850px" align=center alt="MY ALT TEXT"/>
 	<h2 class="subtitle has-text-centered">
           First image description.
         </h2>
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel2.jpg" style="width:850px"  alt="MY ALT TEXT"/>
+        <img src="static/images/carousel2.jpg" style="width:850px" align=center alt="MY ALT TEXT"/>
 	<h2 class="subtitle has-text-centered">
           Second image description.
         </h2>   
       </div>
       <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel3.jpg" style="width:850px"  alt="MY ALT TEXT"/>
+        <img src="static/images/carousel3.jpg" style="width:850px" align=center alt="MY ALT TEXT"/>
 	<h2 class="subtitle has-text-centered">
           Third image description.
         </h2>
      </div>
      <div class="item">
       <!-- Your image here -->
-      <img src="static/images/carousel4.jpg" style="width:850px" alt="MY ALT TEXT"/>
+      <img src="static/images/carousel4.jpg" style="width:850px" align=center alt="MY ALT TEXT"/>
       <h2 class="subtitle has-text-centered">
         Fourth image description.
       </h2>
