--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
 </section>
 <!-- End Method -->
 
-<!-- Image carousel -->
-<section class="hero is-small">
+<!-- Results -->
+<section class="hero is-light">
   <div class="hero-body">
     <div class="container">
       <div class="columns is-centered has-text-centered">
@@ -268,10 +268,10 @@
 </div>
 </div>
 </section>
-<!-- End image carousel -->
+<!-- End Results -->
 
-<!-- Video carousel -->
-<section class="hero is-small is-light">
+<!-- Application -->
+<section class="hero is-small">
   <div class="hero-body">
     <div class="container">
       <h2 class="title is-3">Applications</h2>
@@ -301,7 +301,7 @@
     </div>
   </div>
 </section>
-<!-- End video carousel -->
+<!-- End Application -->
 
 
 <!-- Paper poster -->
