--- a/index.html
+++ b/index.html
@@ -238,14 +238,14 @@
 	      <div id="results-carousel" class="carousel results-carousel">
 	       <div class="item">
 		<!-- Your image here -->
-		<img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
+		<img src="static/images/interhand.jpg" alt="MY ALT TEXT"/>
 		<h2 class="subtitle has-text-centered">
 		  First image description.
 		</h2>
 	      </div>
 	      <div class="item">
 		<!-- Your image here -->
-		<img src="static/images/carousel2.jpg" alt="MY ALT TEXT"/>
+		<img src="static/images/wild.jpg" alt="MY ALT TEXT"/>
 		<h2 class="subtitle has-text-centered">
 		  Second image description.
 		</h2>   
