--- a/index.html
+++ b/index.html
@@ -252,17 +252,10 @@
 	      </div>
 	      <div class="item">
 		<!-- Your image here -->
-		<img src="static/images/carousel3.jpg" alt="MY ALT TEXT"/>
+		<img src="static/images/ego.jpg" alt="MY ALT TEXT"/>
 		<h2 class="subtitle has-text-centered">
 		  Third image description.
 		</h2>
-	     </div>
-	     <div class="item">
-	      <!-- Your image here -->
-	      <img src="static/images/carousel4.jpg" alt="MY ALT TEXT"/>
-	      <h2 class="subtitle has-text-centered">
-		Fourth image description.
-	      </h2>
     </div>
   </div>
 </div>
