--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 		<!-- Your image here -->
 		<img src="static/images/interhand.jpg" alt="MY ALT TEXT"/>
 		<h2 class="subtitle has-text-centered">
-		  First image description.
+		  Qualitative comparison with on InterHand 2.6M test dataset. Our approach generates better results in two-hand reconstruction, particularly in challenging cases such as external occlusion (1), truncation (3-4), or bending one finger with another hand (6). More results can be found in the Supplementary Material.
 		</h2>
 	      </div>
 	      <div class="item">
