--- a/index.html
+++ b/index.html
@@ -247,14 +247,14 @@
 		<!-- Your image here -->
 		<img src="static/images/wild.jpg" alt="MY ALT TEXT"/>
 		<h2 class="subtitle has-text-centered">
-		  Second image description.
+		  Results from RGB2Hands dataset and in-the-wild videos.
 		</h2>   
 	      </div>
 	      <div class="item">
 		<!-- Your image here -->
 		<img src="static/images/ego.jpg" alt="MY ALT TEXT"/>
 		<h2 class="subtitle has-text-centered">
-		  Third image description.
+		  Ego-view results from RGB2Hands dataset and in-the-wild videos.
 		</h2>
 	      </div>
     </div>
