--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 	<div class="item item-video2">
           <video poster="" id="video2" autoplay controls muted loop height="100%">
             <!-- Your video file here -->
-            <source src="static/videos/v3_body.mp4"
+            <source src="static/videos/single-cropped.mp4"
             type="video/mp4">
           </video>
         </div>
