--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
+      <div class="columns is-centered has-text-centered">
       <h2 class="title is-3">Applications</h2>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-video1">
