--- a/index.html
+++ b/index.html
@@ -268,36 +268,37 @@
   <div class="hero-body">
     <div class="container">
       <div class="columns is-centered has-text-centered">
-      <h2 class="title is-3">Applications</h2>
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-video1">
-          <video poster="" id="video1" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/intro_noshadow.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video2">
-          <video poster="" id="video2" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/v3_body.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-	<div class="item item-video2">
-          <video poster="" id="video2" autoplay controls muted loop height="100%">
-            <!-- Your video file here -->
-            <source src="static/videos/single-cropped.mp4"
-            type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-video3">
-          <video poster="" id="video3" autoplay controls muted loop height="100%">\
-            <!-- Your video file here -->
-            <source src="static/videos/qin.mp4"
-            type="video/mp4">
-          </video>
-        </div>
+        <div class="column is-four-fifths">
+	      <h2 class="title is-3">Applications</h2>
+	      <div id="results-carousel" class="carousel results-carousel">
+		<div class="item item-video1">
+		  <video poster="" id="video1" autoplay controls muted loop height="100%">
+		    <!-- Your video file here -->
+		    <source src="static/videos/intro_noshadow.mp4"
+		    type="video/mp4">
+		  </video>
+		</div>
+		<div class="item item-video2">
+		  <video poster="" id="video2" autoplay controls muted loop height="100%">
+		    <!-- Your video file here -->
+		    <source src="static/videos/v3_body.mp4"
+		    type="video/mp4">
+		  </video>
+		</div>
+		<div class="item item-video2">
+		  <video poster="" id="video2" autoplay controls muted loop height="100%">
+		    <!-- Your video file here -->
+		    <source src="static/videos/single-cropped.mp4"
+		    type="video/mp4">
+		  </video>
+		</div>
+		<div class="item item-video3">
+		  <video poster="" id="video3" autoplay controls muted loop height="100%">\
+		    <!-- Your video file here -->
+		    <source src="static/videos/qin.mp4"
+		    type="video/mp4">
+		  </video>
+	</div>
       </div>
     </div>
   </div>
