--- a/index.html
+++ b/index.html
@@ -257,6 +257,28 @@
 		  Ego-view results from RGB2Hands dataset and in-the-wild videos.
 		</h2>
 	  </div>
+	  <div id="results-carousel" class="carousel results-carousel">
+	       <div class="item">
+		<!-- Your image here -->
+		<img src="static/images/interhand.jpg" alt="MY ALT TEXT"/>
+		<h2 class="subtitle has-text-centered">
+		  Qualitative comparison with on InterHand 2.6M test dataset. Our approach generates better results in two-hand reconstruction, particularly in challenging cases such as external occlusion (1), truncation (3-4), or bending one finger with another hand (6). More results can be found in the Supplementary Material.
+		</h2>
+	      </div>
+	      <div class="item">
+		<!-- Your image here -->
+		<img src="static/images/wild.jpg" alt="MY ALT TEXT"/>
+		<h2 class="subtitle has-text-centered">
+		  Results from RGB2Hands dataset and in-the-wild videos.
+		</h2>   
+	      </div>
+	      <div class="item">
+		<!-- Your image here -->
+		<img src="static/images/ego.jpg" alt="MY ALT TEXT"/>
+		<h2 class="subtitle has-text-centered">
+		  Ego-view results from RGB2Hands dataset and in-the-wild videos.
+		</h2>
+	  </div>
     </div>
 </div>
 </div>
