--- a/index.html
+++ b/index.html
@@ -327,7 +327,38 @@
 </section>
 <!-- End Application -->
 
+<!-- Demo video-->
+<section class="hero teaser">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
 
+      <!-- Visual Effects. -->
+      <div class="column">
+        <div class="content">
+          <div class="publication-video">
+            <!-- Youtube embed code here -->
+            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+      <!--/ Visual Effects. -->
+
+      <!-- Matting. -->
+      <div class="column">
+        <div class="content">
+           <div class="publication-video">
+            <!-- Youtube embed code here -->
+            <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
+         </div>
+       </div>
+      </div>
+    </div>
+    <!--/ Matting. -->
+  </div>
+</section>
+<!-- End Demo video -->
+	
 <!-- Paper poster -->
 <section class="hero is-small is-light">
   <div class="hero-body">
