--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="columns is-centered">
-
+      <h2 class="title is-3">Demo</h2>
       <!-- Visual Effects. -->
       <div class="column">
         <div class="content">
