--- a/index.html
+++ b/index.html
@@ -286,29 +286,25 @@
 <!-- End Results -->
 
 <!-- Demo video-->
-<section class="hero teaser">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered">
-      <h2 class="title is-3">Demo</h2>
-      <!-- Visual Effects. -->
-      <div class="column">
+<section class="hero is-small is-light">
+  <div class="hero-body">
+    <div class="container">
+      <!-- Paper video. -->
+      <h2 class="title is-3">Video Presentation</h2>
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-four-fifths">
+          
           <div class="publication-video">
             <!-- Youtube embed code here -->
             <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
-      </div>
-      <!--/ Visual Effects. -->
-
-      <!-- Matting. -->
-      <div class="column">
-           <div class="publication-video">
+	  <div class="publication-video">
             <!-- Youtube embed code here -->
             <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-           </div>
-       </div>
+          </div>
+        </div>
       </div>
     </div>
-    <!--/ Matting. -->
   </div>
 </section>
 <!-- End Demo video -->
