--- a/index.html
+++ b/index.html
@@ -289,10 +289,10 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
-      <!-- Paper video. -->
-      <h2 class="title is-3">Video Presentation</h2>
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
+	  <h2 class="title is-3">Video Presentatio</h2>
+	
            <div class="column">
              <div class="content">
                <div class="publication-video">
@@ -300,6 +300,14 @@
                <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
              </div>
             </div>
+		   
+	    <div class="content">
+               <div class="publication-video">
+               <!-- Youtube embed code here -->
+               <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+             </div>
+            </div>
+	
           </div>
         </div>
       </div>
