--- a/index.html
+++ b/index.html
@@ -174,6 +174,11 @@
       </div>
     </div>
     <!--/ Matting. -->
+    <h2 class="subtitle has-text-centered">
+        <span class="dnerf">Nerfies</span> turns selfie videos from your phone into
+        free-viewpoint
+        portraits.
+    </h2>
   </div>
 </section>
 <!-- End teaser video -->
