--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     </div>
     <!--/ Matting. -->
     <h2 class="subtitle has-text-centered">
-        <span class="dnerf">ACR</span> is the first one-stage arbitrary hand reconstruction methods from only a monocular input.
+        <span class="dnerf">ACR</span> is the first one-stage arbitrary hand reconstruction method from only a monocular input.
         free-viewpoint
         portraits.
     </h2>
