--- a/index.html
+++ b/index.html
@@ -175,9 +175,7 @@
     </div>
     <!--/ Matting. -->
     <h2 class="subtitle has-text-centered">
-        <span class="dnerf">ACR</span> is the first one-stage arbitrary hand reconstruction method from only a monocular input.
-        free-viewpoint
-        portraits.
+        <span class="dnerf">ACR</span> is the first one-stage arbitrary hand reconstruction method using only a monocular RGB image as input.
     </h2>
   </div>
 </section>
