--- a/index.html
+++ b/index.html
@@ -276,14 +276,14 @@
 		<!-- Your image here -->
 		<img src="static/images/inter.jpg" alt="MY ALT TEXT"/>
 		<h2 class="subtitle has-text-centered">
-		  Qualitative comparison with on InterHand 2.6M test dataset. Our approach generates better results in two-hand reconstruction, particularly in challenging cases such as external occlusion (1), truncation (3-4), or bending one finger with another hand (6). More results can be found in the Supplementary Material.
+		  Interacting hand and single hand reconstruction. Here, the images in (e) are selected from RGB2Hands benchmark. The others are from web videos.
 		</h2>
 	      </div>
 	      <div class="item">
 		<!-- Your image here -->
 		<img src="static/images/obj.jpg" alt="MY ALT TEXT"/>
 		<h2 class="subtitle has-text-centered">
-		  Results from RGB2Hands dataset and in-the-wild videos.
+		  Hand-object interaction on web videos (watch videos above for more details).
 		</h2>   
 	      </div>
     </div>
