--- a/index.html
+++ b/index.html
@@ -306,14 +306,14 @@
              <div class="content">
                <div class="publication-video">
                <!-- Youtube embed code here -->
-               <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+               <iframe src="https://www.youtube.com/watch?v=-HTr_-DLqCg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
              </div>
             </div>
 		   
 	    <div class="content">
                <div class="publication-video">
                <!-- Youtube embed code here -->
-               <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+               <iframe src="https://www.youtube.com/watch?v=ntPdgn47sKw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
              </div>
             </div>
 	
