--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
     <div class="container">
       <div class="columns is-centered has-text-centered">
         <div class="column is-four-fifths">
-	  <h2 class="title is-3">Video Presentatio</h2>
+	  <h2 class="title is-3">Videos</h2>
 	
            <div class="column">
              <div class="content">
