--- a/index.html
+++ b/index.html
@@ -306,14 +306,14 @@
              <div class="content">
                <div class="publication-video">
                <!-- Youtube embed code here -->
-               <iframe src="https://www.youtube.com/watch?v=-HTr_-DLqCg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/-HTr_-DLqCg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
              </div>
             </div>
 		   
 	    <div class="content">
                <div class="publication-video">
                <!-- Youtube embed code here -->
-               <iframe src="https://www.youtube.com/watch?v=ntPdgn47sKw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/ntPdgn47sKw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
              </div>
             </div>
 	
