--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Zhengdi Yu</a><sup>1,2</sup>,</span>
+                <a href="https://github.com/ZhengdiYu" target="_blank">Zhengdi Yu</a><sup>1,2</sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Shaoli Huang</a><sup>2,*</sup>,</span>
+                  <a href="https://scholar.google.com/citations?user=o31BPFsAAAAJ&hl=en" target="_blank">Shaoli Huang</a><sup>2,*</sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Chen Fang</a><sup>2</sup>,</span>
+                    <a href="http://fangchen.org/" target="_blank">Chen Fang</a><sup>2</sup>,</span>
                     <span class="author-block">
-                      <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Toby P. Breckon</a><sup>1</sup>,</span>
+                      <a href="https://breckon.org/toby/research/" target="_blank">Toby P. Breckon</a><sup>1</sup>,</span>
                       <span class="author-block">
-                        <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Jue Wang</a>
+                        <a href="https://juewang725.github.io/" target="_blank">Jue Wang</a>
                         <span class="author-block">
                   </span>
                   </div>
