--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
       <h2 class="title">BibTeX</h2>
       <pre><code>@inproceedings{yu2023acr,
   title = {ACR: Attention Collaboration-based Regressor for Arbitrary Two-Hand Reconstruction},
-  author = {Yu, Zhengdi and Huang, Shaoli and Chen, Fang and Breckon, Toby P.},
+  author = {Yu, Zhengdi and Huang, Shaoli and Chen, Fang and Breckon, Toby P. and Wang, Jue},
   booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
   month     = {June},
   year      = {2023}
